Changelog
=========

5.1-dev - (unreleased)
----------------------

5.0 - (2012-06-20)
------------------
* Feature: Improved unmarkcreationflag method.
  [demarant refs #5312]
* Bug fix: removed definition of is_empty
  [tiberich refs #5289]

4.25 - (2012-06-18)
-------------------
* Bug fix: patched ATContentTypes calendarsuport to accept location field
  as a tuple
  [ichimdav fixes #5284]

4.24 - (2012-06-14)
-------------------
* Bug fix: fixed bug introduced in previous egg
  [ichimdav #5229]

4.23 - (2012-06-14)
-------------------
* Bug fix: show results with tinymce when using translations
  [ichimdav #5229]

4.22 - (2012-06-12)
-------------------
* Bug fix: added script to migrate provider_url on ExternalDataSpecs
  [tiberich fixes #5232]
* Upgrade step:
  Create an external method with module name: 
      Products.EEAPloneAdmin.fix_externaldataspecs 
  function name: 
      fix_externaldataspecs
  Execute it, save the output for future reference.
  [tiberich #5232]
* Bug fix: added override for datecomponents from plone.app.form
  [tiberich #5236]
* Upgrade step:
    - Within ZMI > portal_setup > Upgrades Tab run upgrades for
      Products.CMFPlone (4.1.2 -> 4.1.5) 
      [voineali #5116]
    - Within ZMI > portal_setup > Import Tab > Import All Steps from
      'Plone Discussions'
    - Migrate comments: http://localhost:<port>/www/@@comment-migration
    - Enable comments and notification mails on
      http://localhost:8080/www/@@discussion-settings
    - Within ZMI > portal_setup > Import Tab import 'Manage the configuration
      registry' from 'EEA Plone Admin: caching settings' 
      [voineali #5121]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Upgraded commenting system
  [szabozo0 #5189]
* Change: Add 'eea.content.staleResources' cache rule in order to cache some sparql
  resources in varnish for one month
  [voineali, demarant fixes #5121]